--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -2,46 +2,48 @@
     margin: 0;
     padding: 0;
 }
-
+.conteiner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1000px;
+    margin: auto;
+    margin-top: 100px;
+}
 body{
-    background-color: rgb(107, 98, 96);
+    background-color: rgb(37,40,42);
 }
 
 .slider{
-    width: 1100px;
+    width: 800px;
     height: 600px;
     overflow: hidden;
-    border:10px solid #fff;
+    border:10px solid rgb(243, 112, 52);
 }
 
-.middle{
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
-.navigetion{
-    position: absolute;
-    bottom: 16px;
-    left:50px;
+.navigation{
     transform: translateX(-50%);
     display: flex;
 }
 
 .bar{
-    height: 8px;
-    width: 30px;
     margin: 6px;
+    position: relative;
+    left: 100px;
+    bottom: 60px;
+    height: 30px;
+    width: 30px;
+    opacity: .9;
     cursor:pointer    ;
-    background-color: #ddd;
-    opacity: .5;
-    border-radius: 10px;
+    background-color: rgb(37,40,42);
+    border-radius: 50%;
+    border: 3px solid rgb(243, 112, 52);
     transition: all .4s ease;
 }
 
 .bar:hover{
-    opacity: 0.8;
+    opacity: 1;
     transform: scale(1.1);
 }
 
@@ -50,3 +52,30 @@ input[name="r"]{
     visibility: hidden;
 }
 
+.slides{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.slide{
+    width: 100%;
+    transition: all .6s ease;
+}
+.slide img{
+width: 800px;
+height: 100%;
+}
+
+#r1:checked ~  .s1{
+    margin-left: 0;
+}
+#r2:checked ~  .s1{
+    margin-left: -100%;
+}
+#r3:checked ~  .s1{
+    margin-left: -200%;
+}
+#r4:checked ~  .s1{
+    margin-left:-300%;
+}
