--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -6,37 +8,47 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1000px;
+    max-width: 1000px;
+    max-height: 700px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 body{
     background-color: rgb(37,40,42);
 }
 
 .slider{
-    width: 800px;
-    height: 600px;
+    width: 100%;
+    max-width: 700px;
+    height: 700px;
+    border:2px solid rgb(243, 112, 52);
+}
+.images{
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    border:10px solid rgb(243, 112, 52);
 }
 
-
-.navigation{
-    transform: translateX(-50%);
+.texts{
     display: flex;
 }
 
+.aboba{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.navigation{
+    display: flex;
+}
 .bar{
     margin: 6px;
-    position: relative;
-    left: 100px;
-    bottom: 60px;
     height: 30px;
     width: 30px;
     opacity: .9;
-    cursor:pointer    ;
-    background-color: rgb(37,40,42);
+    cursor:pointer;
+    background-color: rgb(243, 112, 52);
     border-radius: 50%;
     border: 3px solid rgb(243, 112, 52);
     transition: all .4s ease;
@@ -45,6 +57,14 @@ body{
 .bar:hover{
     opacity: 1;
     transform: scale(1.1);
+    background-color: rgb(37,40,42);
+    border: 3px solid rgb(243, 112, 52);
+}
+.bar:active{
+    opacity: 1;
+    transform: scale(1.1);
+    background-color: rgb(37,40,42);
+    border: 3px solid rgb(243, 90, 52);
 }
 
 input[name="r"]{
@@ -52,30 +72,46 @@ input[name="r"]{
     visibility: hidden;
 }
 
-.slides{
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
 
-.slide{
-    width: 100%;
-    transition: all .6s ease;
-}
 .slide img{
-width: 800px;
-height: 100%;
+width: 100%;
+}
+p{
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+    color: rgb(243, 112, 52);
 }
 
-#r1:checked ~  .s1{
-    margin-left: 0;
+.texts{
+    display: flex;
+    overflow: hidden;
 }
-#r2:checked ~  .s1{
-    margin-left: -100%;
+p{
+    margin-right: 500px;
 }
-#r3:checked ~  .s1{
-    margin-left: -200%;
+#r1:checked ~ .images .s1{
+    margin-top: 0;
 }
-#r4:checked ~  .s1{
-    margin-left:-300%;
+#r2:checked ~ .images .s1{
+    margin-top: -700px;
 }
+#r3:checked ~ .images .s1{
+    margin-top: -1410px;
+}
+#r4:checked ~ .images .s1{
+    margin-top:-2110px;
+}
+
+#r1:checked ~ .aboba .texts .s1{
+    margin-left: 0px;
+}
+#r2:checked ~ .aboba .texts .s1{
+    margin-left: -620px;
+}
+#r3:checked ~ .aboba .texts .s1{
+    margin-left: -1240px;
+}
+#r4:checked ~ .aboba .texts .s1{
+    margin-left: -1850px;
+}
+
